# terminal-canvas

./: Cargo.toml  README.md  abrir-mi-terminal.command  dist.toml  documentacion-completa.md
.cargo/: config.toml  mingw-dlltool.cmd  mingw-linker.cmd
.github/workflows/: ci.yml
docs/architecture/: performance-budget.md  trusted-live-collaboration.md
docs/plans/: 2026-03-26-infinite-canvas-terminal.md  2026-03-27-folder-workspaces.md  2026-03-27-scalable-runtime-architecture.md
src/: app.rs  main.rs  panel.rs  update.rs
src/app/: desktop.rs  dialogs.rs  perf.rs  taskbar.rs
src/canvas/: config.rs  grid.rs  minimap.rs  mod.rs  scene.rs  snap.rs  viewport.rs
src/collab/: auth.rs  manager.rs  mod.rs  models.rs  protocol.rs  server.rs  tls.rs  transport.rs  view.rs
src/command_palette/: commands.rs  fuzzy.rs  mod.rs
src/orchestration/: git.rs  manager.rs  matching.rs  mod.rs
src/runtime/: mod.rs  pty_manager.rs  registry.rs  render_qos.rs  session.rs  workspace.rs
src/shortcuts/: default_bindings.rs  mod.rs
src/sidebar/: mod.rs  terminal_list.rs  workspace_list.rs
src/state/: mod.rs  panel_state.rs  persistence.rs  workspace.rs
src/terminal/: colors.rs  input.rs  layout.rs  mod.rs  panel.rs  pty.rs  renderer.rs  scrollbar.rs  session_controller.rs
src/theme/: fonts.rs  mod.rs
src/utils/: platform.rs
tests/runtime/: load_20_terminals.rs  perf_budget.rs  perf_scenarios.rs  pty_manager.rs  registry.rs  render_qos.rs  repaint_policy.rs  scheduling.rs
tests/runtime/fixtures/: mod.rs
